tests/spec/arb_enhanced_layouts/compiler/compile-time-constants/negative-qualifiers/negative-layout-qualifier-local_size_x.comp
// [config]
// expect_result: fail
// glsl_version: 3.30
// require_extensions: GL_ARB_enhanced_layouts GL_ARB_compute_shader
// [end config]

#version 330
#extension GL_ARB_compute_shader: enable
#extension GL_ARB_enhanced_layouts: require

layout(local_size_x = -1, local_size_y = 1, local_size_z = 1) in;

void main()
{
}
